# Spendly

./: .env-production  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  NGINX_PROXY_MANAGER_SETUP.md  NPM_CLOUDFLARE_SSL_CONFIG.md  PORTAINER_DEPLOYMENT.md  PORTAINER_FRONTEND_FIX.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  SIMPLE_DEPLOYMENT.md  build-and-deploy.sh  docker-compose.nginx-proxy-dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  env.nginx-proxy-manager  env.portainer  env.portainer-simple  env.production  package-lock.json  portainer-fixed-final.yml  portainer-minimal.yml  portainer-simple.yml  portainer-stack-devserver.yml  portainer-stack-fixed.yml  portainer-stack-nginx-proxy.yml  portainer-stack-prebuilt.yml  portainer-stack-self-contained.yml  portainer-stack-simple.yml  portainer-stack-working.yml  portainer-stack.yml  portainer.env  tailwind.config.js  test-nginx.yml  test_ios_decoding.swift
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  MIGRATION_GUIDE.md  alembic.ini  fix_database.py  main.py  manual_migration.sql  pyproject.toml  requirements-minimal.txt  requirements-prod.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6f1ce18ede3a_allow_zero_budget_amounts.py  f414d6f9c9e_add_expense_share_models_and_columns.py
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  auth.py  budget_groups.py  budget_plans.py  budgets.py  categories.py  currencies.py  deps.py  expense_import.py  expenses.py  payment_methods.py  users.py
backend/app/api/v1/: __init__.py  analytics.py  assets.py  auth.py  budgets.py  categories.py  networth.py  transactions.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  init_db.py  security.py  seed_data.py
backend/app/crud/: __init__.py  base.py  crud_budget.py  crud_budget_group.py  crud_categorization_rule.py  crud_category.py  crud_currency.py  crud_expense.py  crud_payment_method.py  crud_user.py
backend/app/db/: __init__.py  base.py
backend/app/db/models/: __init__.py  budget.py  budget_group.py  categorization_rule.py  category.py  currency.py  expense.py  payment_method.py  user.py
backend/app/models/: __init__.py  asset.py  budget.py  category.py  net_worth.py  transaction.py  user.py
backend/app/schemas/: __init__.py  asset.py  auth.py  budget.py  budget_group.py  budget_plan.py  categorization_rule.py  category.py  currency.py  expense.py  net_worth.py  payment_method.py  token.py  transaction.py  user.py
backend/app/services/: currency_service.py  expense_import_service.py
backend/app/static/: transaction_template.csv
backend/scripts/: budget_constraint_migration.sql  check_budget_constraint.sql  init_currencies.py  migrate_budget_constraint.py  migrate_payment_methods.py  rollback_budget_constraint.sql
backend/tests/: test_main.py
config/nginx/: default.conf  nginx.conf
docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  PHASE1_SUMMARY.md  PROJECT_DOCUMENTATION.md
docs/api/: README.md
docs/database/: README.md
docs/deployment/: README.md
frontend/: Dockerfile  Dockerfile.dev  Dockerfile.dev-server  Dockerfile.prebuilt  Dockerfile.prod  Dockerfile.simple  nginx-proxy-manager.conf  nginx.conf  package-lock.json  package.json  server.js  tailwind.config.js  test-direct-files.css  test-emergency.css  test-simple.html
nginx/: Dockerfile  nginx.conf
sample/: 2024 - Ayoub Expenses - Personal.xlsx  Ayoub Lefhim Net Worth.xlsx  Movimenti_Conto_09082025.xlsx  activity.csv  lista_completa_12082025 (1).xlsx
scripts/: build-images.sh  create_realistic_categories.py  deploy.sh  extract_categories.py  get_user_id.py  import_categories.py  import_for_specific_user.py  import_via_api.py  init_database.py  setup.sh  transfer-images.sh
(+123 files in other folders)
